# cmake_test

./: CMakeLists.txt  main.c
my_lib_top/: CMakeLists.txt  my_lib_top.c  my_lib_top.h
my_lib_top/my_lib_mid/: CMakeLists.txt  my_lib_mid.c  my_lib_mid.h
